Fix width of input so nub position is consistant on Firefox and WebKit

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,5 +73,7 @@ td.selected {
 	z-index: 10;
 }
 
-span.nub { display: block; width: 250px; height: 10px; background-position: left bottom; background-repeat: no-repeat; position: absolute; top: -10px; left: 225px; z-index: 501; }
+#twitter-username { width: 120px; }
+
+span.nub { display: block; width: 250px; height: 10px; background-position: left bottom; background-repeat: no-repeat; position: absolute; top: -10px; left: 212px; z-index: 501; }
 span.nub.cfff { background-image: url(/images/nub-fff.png); }
